--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
     "ember-bootstrap": "0.0.5",
-    "ember-cli": "0.2.0-beta.1",
+    "ember-cli": "0.2.0",
     "ember-cli-app-version": "0.3.1",
     "ember-cli-babel": "^4.0.0",
     "ember-cli-dependency-checker": "0.0.7",
